feat: add locker permission routes, controller and service
