# backend/src/types/locker-permission.ts
@@ -1,0 +1,4 @@
+export interface LockerPermissionDTO {
+  userId: string;
+  expiresAt: Date;
+}
